# python-powerschool-adapter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.run/: package for pip.run.xml
powerschool_adapter/: paginator.py  powerschool.py  request.py  response.py
psa/: __init__.py  operator.py  paginator.py  request.py  response.py
psps/: __init__.py  operator.py  paginator.py  powerschool.py  request.py  request_builder.py  response.py
tests/: test_enroll.py  test_expansions.py  test_extensions.py  test_pagination.py  test_powerschool.py  test_query_expression.py  test_subscription.py
