[metadata]
name = powerschool_adapter
version = 1.0.0
author = TONYLABS TECH CO., LTD.
author_email = tony.wang@tonyalbs.com
description = A python adapter of PowerSchool API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tonylabs/python-powerschool-adapter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.20.0
    python-dotenv>=1.0.1
    faker>=35.0.0
    diskcache>=5.6.0